# evidence-based-biomedical-multiagent-ai

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: 00-agents-overview.md  01-functional-requirements.md  02-non-functional-requirements.md  03-architecture-and-tech-stack.md  04-data-model-and-governance.md  05-data-quality-rules.md  06-qa-test-plan.md  07-phased-development-plan.md
docs/research/: architectures.md  open-source-components.md  technologies.md
docs/runbooks/: agent-workflow-failure.md  feature-store-staleness.md  ingestion-failure.md  ui-api-restart.md  vector-db-recovery.md
infrastructure/: .env.example  docker-compose.yml
infrastructure/scripts/: init-minio.sh  smoke-test.sh
sbom/: sbom.json
src/agent_api/: Dockerfile  config.py  main.py  metrics.py
src/agent_api_stub/: Dockerfile  __init__.py  main.py
src/agent_worker/: Dockerfile  config.py
src/audit_api/: Dockerfile  config.py  main.py
src/embedding_worker/: Dockerfile  config.py  embedder.py  jobs.py  qdrant_ops.py  spark_reader.py
src/feature_api/: Dockerfile  config.py  main.py
src/feature_worker/: Dockerfile  config.py
src/ingestion_worker/: Dockerfile  __init__.py  config.py
src/retrieval_api/: Dockerfile  config.py  external_assets.py  main.py
src/ui/: Dockerfile  app.py  components.py
tests/chaos/: test_resilience.py
tests/integration/: conftest.py  test_agent_integration.py  test_feast_materialization.py  test_phase5_e2e.py  test_qdrant_indexing.py  test_spark_iceberg.py
tests/load/: locustfile.py
tests/unit/: test_metrics.py
(+53 files in other folders)
