[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedical-ai"
version = "0.1.0"
description = "Evidence-Based Bio-Medical Multi-Agent System"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.3",
    "temporalio>=1.7.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.0",
    "boto3>=1.35.0",
    "pyarrow>=17.0.0",
    "httpx>=0.27.0",
    "sentence-transformers>=2.7.0",
    "qdrant-client>=1.10.0",
    "feast[redis]>=0.40.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "langgraph>=0.2.0",
    "redis>=5.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running infrastructure)",
    "chaos: marks tests as chaos/resilience tests (require running stack + Docker SDK)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
